Add the 2nd row of the Landing page (no flexbox)
this adds the 2nd row of the Landing page without flexbox in index.html

--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+        <div>
+            <div>
+                <div>This website is awesome</div>
+                <div>
+                    this website has some subtext that goes here
+                    under the main title. It's a smaller font and
+                    the color is a lower contrast.
+                </div>
+                <button>Sign up</button>
+            </div>
+            <div></div>
+        </div>
     </body>
 </html>
