Add the 3rd & 4th rows of the landing page in html
this adds the 3rd and 4th rows of the landing page in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <div></div>
+            <div>Some random information</div>
+            <div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
