--- a/index.html
+++ b/index.html
@@ -54,5 +54,15 @@
             </div>
             <div>-Thor, God of Thunder</div>
         </div>
+        <div>
+            <div>
+                <div>Call to action! It's time!</div>
+                <div>
+                    Sign up for our product by clicking that button 
+                    right over there.
+                </div>
+            </div>
+            <button>Sign up</button>
+        </div>
     </body>
 </html>
