Add the white part around the blue part
adds the white part around the blue part at the bottom to index.html

--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
         </div>
         <div>
             <div>
-                <div>Call to action! It's time!</div>
                 <div>
-                    Sign up for our product by clicking that button 
-                    right over there.
+                    <div>Call to action! It's time!</div>
+                    <div>
+                        Sign up for our product by clicking that button 
+                        right over there.
+                    </div>
                 </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
     </body>
 </html>
