--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
                 <button>Sign up</button>
             </div>
         </div>
+        <div>
+            <div>Copyright © The Odin Project</div>
+        </div>
     </body>
 </html>
