--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     </head>
 
     <body>
-        <div>
-            <div>Header Logo</div>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-        <div>
+        <div class="hero">
+            <div class="header">
+                <div class="header-logo">Header Logo</div>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
             <div>
-                <div>This website is awesome</div>
                 <div>
-                    this website has some subtext that goes here
-                    under the main title. It's a smaller font and
-                    the color is a lower contrast.
+                    <div>This website is awesome</div>
+                    <div>
+                        this website has some subtext that goes here
+                        under the main title. It's a smaller font and
+                        the color is a lower contrast.
+                    </div>
+                    <button>Sign up</button>
                 </div>
-                <button>Sign up</button>
             </div>
             <div>Some random information</div>
             <div>
