--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
             <div class="header">
                 <div class="header-logo">Header Logo</div>
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a class="hero-sub-text" href="#">header link one</a></li>
+                    <li><a class="hero-sub-text" href="#">header link two</a></li>
+                    <li><a class="hero-sub-text" href="#">header link three</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="hero-main">
                 <div>
-                    <div>This website is awesome</div>
-                    <div>
-                        this website has some subtext that goes here
+                    <div class="hero-main-text">This website is awesome</div>
+                    <div class="hero-sub-text desc">
+                        This website has some subtext that goes here
                         under the main title. It's a smaller font and
                         the color is a lower contrast.
                     </div>
-                    <button>Sign up</button>
+                    <button class="button-1">Sign up</button>
                 </div>
+                <div class="gray-space">this is a placeholder for an image</div>
             </div>
+        </div>
             <div>Some random information</div>
             <div>
                 <div>
@@ -46,7 +48,6 @@
                     <div></div>
                 </div>
             </div>
-        </div>
         <div>
             <div>
                 This is an inspiring quote, or a testimonial from a
