Add the main middle row+fix css in the hero
this adds css to make the main middle information row

the middle row is comprised of img placeholders, subtext, and a header

this changes the text of the placeholder image text in the hero to white

--- a/index.html
+++ b/index.html
@@ -29,23 +29,35 @@
                 <div class="gray-space">this is a placeholder for an image</div>
             </div>
         </div>
-            <div>Some random information</div>
-            <div>
-                <div>
-                    <div></div>
-                    <div></div>
+            <div class="information-header">Some random information</div>
+            <div class="information">
+                <div class="info-container">
+                    <div class="info-img"></div>
+                    <div class="info-subtext">
+                        this is some subtext under an illustration
+                        or image
+                    </div>
                 </div>
                 <div>
-                    <div></div>
-                    <div></div>
+                    <div class="info-img"></div>
+                    <div class="info-subtext">
+                        this is some subtext under an illustration
+                        or image
+                    </div>
                 </div>
                 <div>
-                    <div></div>
-                    <div></div>
+                    <div class="info-img"></div>
+                    <div class="info-subtext">
+                        this is some subtext under an illustration
+                        or image
+                    </div>
                 </div>
                 <div>
-                    <div></div>
-                    <div></div>
+                    <div class="info-img"></div>
+                    <div class="info-subtext">
+                        this is some subtext under an illustration
+                        or image
+                    </div>
                 </div>
             </div>
         <div>
