--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="hero-main">
                 <div>
-                    <div class="hero-main-text">This website is awesome</div>
+                    <div class="hero-main-text"><strong>This website is awesome</strong></div>
                     <div class="hero-sub-text desc">
                         This website has some subtext that goes here
                         under the main title. It's a smaller font and
@@ -29,7 +29,7 @@
                 <div class="gray-space">this is a placeholder for an image</div>
             </div>
         </div>
-            <div class="information-header">Some random information</div>
+            <div class="information-header"><strong>Some random information</strong></div>
             <div class="information">
                 <div class="info-container">
                     <div class="info-img"></div>
@@ -60,12 +60,12 @@
                     </div>
                 </div>
             </div>
-        <div>
-            <div>
-                This is an inspiring quote, or a testimonial from a
+        <div class="quote-section">
+            <div class="quote">
+                <em>This is an inspiring quote, or a testimonial from a
                 customer. Maybe it's just filling up space, or maybe
                 people will actually read it. Who knows? All I know is
-                that it looks nice.
+                that it looks nice.</em>
             </div>
             <div>-Thor, God of Thunder</div>
         </div>
