Add css to the quote row
this makes the quote row have a light gray color background

this also pads the section to the top and bottom

the quote & the quote ref have been sized appropriately

the quote ref has also been bolded

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 people will actually read it. Who knows? All I know is
                 that it looks nice.</em>
             </div>
-            <div>-Thor, God of Thunder</div>
+            <div class="quote-ref"><strong>-Thor, God of Thunder</strong></div>
         </div>
         <div>
             <div>
