--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
             </div>
             <div class="quote-ref"><strong>-Thor, God of Thunder</strong></div>
         </div>
-        <div>
-            <div>
+        <div class="cta-container">
+            <div class="cta">
                 <div>
-                    <div>Call to action! It's time!</div>
-                    <div>
+                    <div class="cta-main-text"><strong>Call to action! It's time!</strong></div>
+                    <div class="cta-sub-text">
                         Sign up for our product by clicking that button 
                         right over there.
                     </div>
                 </div>
-                <button>Sign up</button>
+                <button class="button-2">Sign up</button>
             </div>
         </div>
-        <div>
-            <div>Copyright © The Odin Project</div>
+        <div class="footer">
+            <div>Copyright © The Odin Project 2021</div>
         </div>
     </body>
 </html>
